Fix to eliminate vertical scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -342,7 +342,7 @@ FORM A
    margin: 0;
    padding: 0;
    width: 100%;
-   height: 100%;
+   height: calc(100% - 80px);
    position: absolute;
    top: 55px;
 
